--- a/about.html
+++ b/about.html
@@ -1,271 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>About | Sahithyan</title>
-		<meta
-			name="description"
-			content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
-		/>
-
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-		<link
-			rel="alternate"
-			href="https://sahithyandev.github.io/feed.xml"
-			type="application/rss+xml"
-			title="RSS feed"
-		/>
-
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="@sahithyandev" />
-
-		<meta property="og:type" content="website" />
-		<meta
-			property="og:description"
-			content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
-		/>
-		<meta property="og:title" content="About | Sahithyan" />
-		<meta property="og:url" content="sahithyandev.github.io/about" />
-		<meta property="og:site_name" content="Sahithyan" />
-		<meta
-			property="og:image"
-			content="https://sahithyandev.github.io/og-images/base.png"
-		/>
-		<meta property="og:image:alt" content="Sahithyan" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
-
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-
-		<link
-			rel="preload"
-			as="style"
-			onload="this.onload=null; this.rel='stylesheet'"
-			class="google-fonts-link"
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap"
-		/>
-
-		<noscript>
-			<link class="google-fonts-link" rel="stylesheet" type="text/css" />
-		</noscript>
-
-		<script
-			data-host="https://microanalytics.io"
-			data-dnt="false"
-			src="https://microanalytics.io/js/script.js"
-			id="ZwSg9rf6GA"
-			async=""
-			defer=""
-		></script>
-
-		<link rel="stylesheet" href="/global.css" />
-
-		<script>
-			if ("serviceWorker" in navigator) {
-				navigator.serviceWorker
-					.register("/service-worker.js")
-					.catch((error) => {
-						console.error("Error while initializing service worker", error);
-					});
-			}
-			window.__supportCssHas = true;
-			try {
-				document.querySelector("*:has(input:checked)");
-			} catch (e) {
-				if (e instanceof DOMException) {
-					window.__supportCssHas = false;
-				}
-			}
-
-			// select pre-selected theme
-			const theme = window.localStorage.getItem("theme");
-			if (theme) {
-				function setTheme() {
-					const themeElement = document.querySelector(`input#theme-${theme}`);
-					if (!themeElement) {
-						requestAnimationFrame(setTheme);
-					} else {
-						themeElement.checked = true;
-						if (!window.__supportCssHas) {
-							document.documentElement.setAttribute("data-theme", theme);
-						}
-					}
-				}
-				requestAnimationFrame(setTheme);
-			}
-		</script>
-
-		<style>
-			.social-links {
-				display: flex;
-				gap: 0.5rem;
-				margin: 0.5rem auto 0;
-				width: fit-content;
-			}
-			.social-links a {
-				transition: opacity cubic-bezier(0.6, 0, 0.3, 1) 150ms;
-				opacity: 0.6;
-			}
-			.social-links a:hover {
-				opacity: 1;
-			}
-
-			.styled-link {
-				color: var(--secondary);
-				transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
-				text-decoration: underline;
-			}
-
-			.styled-link:hover {
-				color: var(--secondary-dark);
-			}
-		</style>
-	</head>
-
-	<body>
-		<div id="nav-bar">
-			<nav>
-				<a href="/" class="nav--logo" data-is-internal="">SAHTIHYAN</a
-				><input type="checkbox" id="menu-toggle" /><label
-					for="menu-toggle"
-					class="hamburger-icon"
-				></label>
-				<ul>
-					<li>
-						<a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a>
-					</li>
-					<li>
-						<a href="/projects" class="nav--link" data-is-internal=""
-							>Projects</a
-						>
-					</li>
-					<li>
-						<a href="/posts" class="nav--link" data-is-internal="">Posts</a>
-					</li>
-					<li>
-						<a href="/about" class="nav--link" data-is-internal="">About</a>
-					</li>
-					<li class="theme-switch-labels">
-						<div class="one-push-switch">
-							<input
-								class="sr-only"
-								type="radio"
-								name="theme-switch"
-								id="theme-auto"
-								value="auto"
-								checked=""
-							/><label for="theme-light" title="Change to light theme"
-								>auto</label
-							><input
-								class="sr-only"
-								type="radio"
-								name="theme-switch"
-								id="theme-light"
-								value="light"
-							/><label for="theme-dark" title="Change to dark theme"
-								>light</label
-							><input
-								class="sr-only"
-								type="radio"
-								name="theme-switch"
-								id="theme-dark"
-								value="dark"
-							/><label for="theme-auto" title="Use user-preferenced theme"
-								>dark</label
-							>
-						</div>
-					</li>
-				</ul>
-			</nav>
-		</div>
-		<div id="root">
-			<main>
-				<h1>About</h1>
-				<p>
-					Hello!, I am Sahithyan from Jaffna, Sri Lanka. I am a 18-year-old
-					Physical Science student in school. I have been developing web apps
-					for about 5 years (or more) using various technologies. AND I LOVE
-					IT!!.
-				</p>
-				<h2>About this site</h2>
-				<p>
-					This website is made using Preact, TypeScript, Sass, MDX, Rollup, and
-					Gulp. And hosted using GitHub Pages. For security reasons, I have made
-					the source code of this website private.
-				</p>
-				<h2>Contact me</h2>
-				<p>
-					The fastest and the easiest way would be direct messaging me on
-					Twitter
-					<a
-						href="https://www.twitter.com/sahithyandev"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="styled-link"
-						>@sahithyandev</a
-					>. You can email me at
-					<a
-						href="mailto:sahithyan2701@gmail.com"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="styled-link"
-						>sahithyan2701@gmail.com</a
-					>. And also, you can find me on
-					<a
-						href="https://www.instagram.com/sahithyan_"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="styled-link"
-						>Instagram</a
-					>
-					and
-					<a
-						href="https://www.github.com/sahithyandev"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="styled-link"
-						>GitHub</a
-					>!
-				</p>
-			</main>
-		</div>
-		<footer>© Sahithyan 2023</footer>
-
-		<script>
-			function addThemeReminder() {
-				const themeSwitchElements = document.querySelectorAll(
-					"input[name=theme-switch]"
-				);
-				if (themeSwitchElements.length != 0) {
-					themeSwitchElements.forEach((item) => {
-						const selectedTheme = item.id.replace("theme-", "");
-
-						item.addEventListener("input", () => {
-							console.log(selectedTheme);
-							// this is the checked input
-							window.localStorage.setItem("theme", selectedTheme);
-
-							if (!window["__supportCssHas"]) {
-								document.documentElement.setAttribute(
-									"data-theme",
-									selectedTheme
-								);
-							}
-						});
-					});
-				} else {
-					requestAnimationFrame(addThemeReminder);
-				}
-			}
-
-			requestIdleCallback(() => {
-				requestAnimationFrame(addThemeReminder);
-			});
-		</script>
-	</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>About | Sahithyan</title><meta name="description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="alternate" href="https://sahithyandev.github.io/feed.xml" type="application/rss+xml" title="RSS feed"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:site" content="@sahithyandev"><meta property="og:type" content="website"><meta property="og:description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."><meta property="og:title" content="About | Sahithyan"><meta property="og:url" content="sahithyandev.github.io/about"><meta property="og:site_name" content="Sahithyan"><meta property="og:image" content="https://sahithyandev.github.io/og-images/base.png"><meta property="og:image:alt" content="Sahithyan"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' class="google-fonts-link" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap"><noscript><link class="google-fonts-link" rel="stylesheet" type="text/css"></noscript><script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async="" defer=""></script><link rel="stylesheet" href="/global.css"><script>"serviceWorker"in navigator&&navigator.serviceWorker.register("/service-worker.js").catch((e=>{console.error("Error while initializing service worker",e)})),window.__supportCssHas=!0;try{document.querySelector("*:has(input:checked)")}catch(e){e instanceof DOMException&&(window.__supportCssHas=!1)}const theme=window.localStorage.getItem("theme");if(theme){function setTheme(){const e=document.querySelector(`input#theme-${theme}`);e?(e.checked=!0,window.__supportCssHas||document.documentElement.setAttribute("data-theme",theme)):requestAnimationFrame(setTheme)}requestAnimationFrame(setTheme)}</script><style>.social-links{display:flex;gap:.5rem;margin:.5rem auto 0;width:fit-content}.social-links a{transition:opacity cubic-bezier(.6,0,.3,1) 150ms;opacity:.6}.social-links a:hover{opacity:1}.styled-link{color:var(--secondary);transition:all cubic-bezier(.4,0,.2,1) 150ms;text-decoration:underline}.styled-link:hover{color:var(--secondary-dark)}</style></head><body><div id="nav-bar"><nav><a href="/" class="nav--logo" data-is-internal="">SAHTIHYAN</a><input type="checkbox" id="menu-toggle"><label for="menu-toggle" class="hamburger-icon"></label><ul><li><a href="/tidbits" class="nav--link" data-is-internal="">Tidbits</a></li><li><a href="/projects" class="nav--link" data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link" data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link" data-is-internal="">About</a></li><li class="theme-switch-labels"><div class="one-push-switch"><input class="sr-only" type="radio" name="theme-switch" id="theme-auto" value="auto" checked=""><label for="theme-light" title="Change to light theme">auto</label><input class="sr-only" type="radio" name="theme-switch" id="theme-light" value="light"><label for="theme-dark" title="Change to dark theme">light</label><input class="sr-only" type="radio" name="theme-switch" id="theme-dark" value="dark"><label for="theme-auto" title="Use user-preferenced theme">dark</label></div></li></ul></nav></div><div id="root"><main><h1>About</h1><p>Hello!, I am Sahithyan from Jaffna, Sri Lanka. I am a 18-year-old Physical Science student in school. I have been developing web apps for about 5 years (or more) using various technologies. AND I LOVE IT!!.</p><h2>About this site</h2><p>This website is made using Preact, TypeScript, Sass, MDX, Rollup, and Gulp. And hosted using GitHub Pages. For security reasons, I have made the source code of this website private.</p><h2>Contact me</h2><p>The fastest and the easiest way would be direct messaging me on Twitter <a href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class="styled-link">@sahithyandev</a>. You can email me at <a href="mailto:sahithyan2701@gmail.com" target="_blank" rel="noopener noreferrer" class="styled-link">sahithyan2701@gmail.com</a>. And also, you can find me on <a href="https://www.instagram.com/sahithyan_" target="_blank" rel="noopener noreferrer" class="styled-link">Instagram</a> and <a href="https://www.github.com/sahithyandev" target="_blank" rel="noopener noreferrer" class="styled-link">GitHub</a>!</p></main></div><footer>© Sahithyan 2023</footer><script>function addThemeReminder(){const e=document.querySelectorAll("input[name=theme-switch]");0!=e.length?e.forEach((e=>{const t=e.id.replace("theme-","");e.addEventListener("input",(()=>{console.log(t),window.localStorage.setItem("theme",t),window.__supportCssHas||document.documentElement.setAttribute("data-theme",t)}))})):requestAnimationFrame(addThemeReminder)}requestIdleCallback((()=>{requestAnimationFrame(addThemeReminder)}))</script></body></html>
